--- a/nginx.conf
+++ b/nginx.conf
@@ -1,15 +1,26 @@
 server {
     listen 3000;
-    server_name localhost;
+    server_name _;
+
+    root /usr/share/nginx/html;
+    index index.html;
 
     location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
         try_files $uri $uri/ /index.html;
+
+        # ✅ Secure Content Security Policy (can be updated later)
+        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-eval'" always;
+
+        # Optional additional security headers (recommended)
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-Frame-Options "DENY" always;
+        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+        add_header Permissions-Policy "geolocation=(), microphone=()" always;
     }
 
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|otf|eot)$ {
+        expires 30d;
+        add_header Cache-Control "public, max-age=2592000";
+        try_files $uri $uri/ /index.html;
     }
 }
