--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,8 @@ server {
         try_files $uri $uri/ /index.html;
 
         # ✅ Secure Content Security Policy (can be updated later)
-        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-eval'" always;
+        add_header Content-Security-Policy "default-src 'self'; script-src 'self' https://cdn.jsdelivr.net 'unsafe-inline'; style-src 'self' https://cdn.jsdelivr.net 'unsafe-inline'; connect-src 'self' http://65.1.106.80:3001;";
+
 
         # Optional additional security headers (recommended)
         add_header X-Content-Type-Options "nosniff" always;
