--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,16 @@ server {
         try_files $uri $uri/ /index.html;
 
         # ✅ Secure Content Security Policy (can be updated later)
-        add_header Content-Security-Policy "default-src 'self'; script-src 'self' https://cdn.jsdelivr.net 'unsafe-inline'; style-src 'self' https://cdn.jsdelivr.net 'unsafe-inline'; connect-src 'self' http://65.1.106.80:3001;";
+        add_header Content-Security-Policy "
+        default-src 'self';
+        style-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://fonts.googleapis.com 'unsafe-inline';
+        font-src 'self' https://fonts.gstatic.com;
+        script-src 'self' https://cdn.jsdelivr.net 'unsafe-inline';
+        connect-src 'self' http://65.1.106.80:3001;
+        img-src 'self' data:;
+        object-src 'none';
+        ";
+
 
 
         # Optional additional security headers (recommended)
