--- a/nginx.conf
+++ b/nginx.conf
@@ -1,27 +1,24 @@
 server {
     listen 3000;
     server_name _;
-
     root /usr/share/nginx/html;
     index index.html;
 
     location / {
         try_files $uri $uri/ /index.html;
 
-        # ✅ Secure Content Security Policy (can be updated later)
+        # Correct CSP Header
         add_header Content-Security-Policy "
         default-src 'self';
         style-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://fonts.googleapis.com 'unsafe-inline';
         font-src 'self' https://fonts.gstatic.com;
-        script-src 'self' https://cdn.jsdelivr.net 'unsafe-inline';
+        script-src 'self' https://cdn.jsdelivr.net 'unsafe-inline' 'unsafe-eval';  # Add 'unsafe-eval'
         connect-src 'self' http://65.1.106.80:3001;
-        img-src 'self' data:;
+        img-src 'self' data: blob:;  # Add 'blob:' for image blobs
         object-src 'none';
         ";
 
-
-
-        # Optional additional security headers (recommended)
+        # Security headers
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-Frame-Options "DENY" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
